# pydantic_bigquery

./: pyproject.toml
pydantic_bigquery/: model.py  repository.py
